# opengl-lab-env

./: CMakeCache.txt  Makefile  cmake_install.cmake  package-lock.json
engine/: Makefile  cmake_install.cmake
engine/core/: Makefile  cmake_install.cmake
engine/render/: Makefile  cmake_install.cmake
exts/: Makefile  cmake_install.cmake
exts/glew/: Makefile  cmake_install.cmake
exts/glfw/: Makefile  cmake_install.cmake
exts/glfw/src/: Makefile  cmake_install.cmake
exts/glm/: Makefile  cmake_install.cmake
projects/: Makefile  cmake_install.cmake
projects/example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example  input.txt
projects/example/_lab1/: exampleapp.cc  exampleapp.h
projects/example/code/: exampleapp.cc  exampleapp.h  node.cpp  node.h  tools.h  triangulation.cpp  triangulation.h
projects/example/lab2/: exampleapp.cc  exampleapp.h  node.h  triangulation.h
projects/example/lab3/: graphicsnode.cpp  graphicsnode.h  main.cc  material.cpp  material.h  mesh.cpp  mesh.h  monochromematerial.cpp  monochromematerial.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  types.h
